<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dmitriyvedmid.mypills.AddDrug.AddDrugFragment">

    <EditText
        android:id="@+id/add_drug_drug_name_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/drug_name"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/taking_time"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/add_drug_taking_time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_amount"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/add_drug_drug_amount_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/amount_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/add_drug_choose_drug_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/taking_inteval"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/add_drug_choose_drug_taking_interval_spinner"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"/>

        <EditText
            android:id="@+id/add_drug_n"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/n"
            android:inputType="numberSigned"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/left_amount"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/add_drug_left_amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/left_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/add_drug_next_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/buttonBackground"
        android:text="@string/next"
        android:textColor="@android:color/primary_text_dark"
        android:visibility="gone"/>

</LinearLayout>
