<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dmitriyvedmid.mypills.CalendarActivity.CalendarFragment">

    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        android:layout_width="match_parent"
        android:layout_height="223dp"
        app:compactCalendarBackgroundColor="#ffe95451"
        app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
        app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextColor="#fff"
        app:compactCalendarTextSize="12sp"
        android:id="@+id/calendar">
    </com.github.sundeepk.compactcalendarview.CompactCalendarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/previous_menstruation_start"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/calendar_previous_menstruation_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/previous_menstruation_length"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/calendar_previous_menstruation_length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/cycle_length"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/calendar_cycle_length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
